--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ^3.4.0
 
 dependencies:
   cupertino_icons: ^1.0.8
@@ -43,10 +43,10 @@ dependencies:
     sdk: flutter
   intl: ^0.19.0
   flutter_advanced_drawer: ^1.3.6
-  lottie: ^3.1.1
+  lottie: ^3.1.2
   flutter_svg: ^2.0.10+1
   flex_color_scheme: ^7.3.1
-  flex_color_picker: ^3.4.1
+  flex_color_picker: '>=3.4.1 <4.0.0'
   flutter_local_notifications: ^17.1.2
   firebase_messaging: ^14.9.2
   device_info_plus: ^10.1.0
@@ -58,7 +58,7 @@ dependencies:
   file_picker: ^8.0.3
   photo_view: ^0.15.0
   firebase_ui_auth: ^1.14.0
-  datadog_flutter_plugin: ^2.4.0
+  datadog_flutter_plugin: ^2.5.0
   mocktail: ^1.0.3
   hive: ^2.2.3
   badges: ^3.1.2
@@ -69,12 +69,12 @@ dependencies:
 
 dev_dependencies:
   flutter_lints: ^4.0.0
-  riverpod_generator: ^2.4.1
-  go_router_builder: ^2.6.2
-  build_runner: ^2.4.9
-  freezed: ^2.5.2
+  riverpod_generator: '>=2.4.2 <3.0.0-dev.2'
+  go_router_builder: ^2.7.0
+  build_runner: ^2.4.10
+  freezed: ^2.5.3
   json_serializable: ^6.8.0
-  riverpod_lint: ^2.3.11
+  riverpod_lint: ^2.3.12
   custom_lint: ^0.6.4
   flutter_flavorizr: ^2.2.3
   flutter_test:
