--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 agp = "8.4.0"
-kotlin = "1.9.23"
+kotlin = "1.9.24"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -18,7 +18,6 @@ fabric = "1.4.8"
 annotations = "0.1.0"
 kotlinCompilerEmbeddable = "1.9.24"
 lifecycleCommon = "2.8.0"
-engine = "1.0.0"
 supportAnnotations = "28.0.0"
 devFlutter = "1.0.0"
 vectordrawable = "1.0.0"
@@ -30,6 +29,10 @@ workGcm = "2.9.0"
 workMultiprocess = "2.9.0"
 workTesting = "2.9.0"
 comAndroidLibraryGradlePlugin = "8.6.0-alpha02"
+googleGmsGoogleServices = "4.4.1"
+firebaseAuth = "23.0.0"
+comGoogleFirebaseCrashlyticsGradlePlugin = "3.0.1"
+testlabGradlePlugin = "0.0.1-alpha06"
 
 
 [libraries]
@@ -52,7 +55,6 @@ annotations = { group = "io.telereso.kmp", name = "annotations", version.ref = "
 com-android-library-gradle-plugin = { group = "com.android.library", name = "com.android.library.gradle.plugin", version.ref = "agp" }
 kotlin-compiler-embeddable = { group = "org.jetbrains.kotlin", name = "kotlin-compiler-embeddable", version.ref = "kotlinCompilerEmbeddable" }
 androidx-lifecycle-common = { group = "androidx.lifecycle", name = "lifecycle-common", version.ref = "lifecycleCommon" }
-engine = { group = "com.google.android.fhir", name = "engine", version.ref = "engine" }
 support-annotations = { group = "com.android.support", name = "support-annotations", version.ref = "supportAnnotations" }
 asset-delivery-ktx = { group = "com.google.android.play", name = "asset-delivery-ktx", version.ref = "coreKtxVersion" }
 androidx-work-runtime = { group = "androidx.work", name = "work-runtime", version.ref = "workRuntime" }
@@ -62,11 +64,15 @@ androidx-work-gcm = { group = "androidx.work", name = "work-gcm", version.ref = 
 androidx-work-multiprocess = { group = "androidx.work", name = "work-multiprocess", version.ref = "workMultiprocess" }
 androidx-work-testing = { group = "androidx.work", name = "work-testing", version.ref = "workTesting" }
 library-com-android-library-gradle-plugin = { group = "com.android.library", name = "com.android.library.gradle.plugin", version.ref = "comAndroidLibraryGradlePlugin" }
+firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
+com-google-firebase-crashlytics-gradle-plugin = { group = "com.google.firebase.crashlytics", name = "com.google.firebase.crashlytics.gradle.plugin", version.ref = "comGoogleFirebaseCrashlyticsGradlePlugin" }
+testlab-gradle-plugin = { group = "com.google.firebase.testlab", name = "testlab-gradle-plugin", version.ref = "testlabGradlePlugin" }
 
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
 
 
 #android-enableImpeller = { id = "io.flutter.embedding.android.gradle.plugin", version.ref = "devFlutter"}
