--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,11 +3,11 @@ version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
 environment:
-  sdk: ^3.4.0
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   cupertino_icons: ^1.0.8
-  go_router: ^14.1.1
+  go_router: ^14.1.2
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
   sentry_flutter: ^8.2.0
@@ -41,7 +41,7 @@ dependencies:
   formz: ^0.7.0
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: any
   flutter_advanced_drawer: ^1.3.6
   lottie: ^3.1.2
   flutter_svg: ^2.0.10+1
@@ -81,6 +81,9 @@ dev_dependencies:
     sdk: flutter
   flutter_gen_runner: ^5.4.0
   icons_launcher: ^2.1.7
+
+dependency_overrides:
+  meta: any
 
 flutter_gen:
   output: lib/gen
