--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -5,28 +5,35 @@ pluginManagement {
         def flutterSdkPath = properties.getProperty("flutter.sdk")
         assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
         return flutterSdkPath
-    }
-    settings.ext.flutterSdkPath = flutterSdkPath()
+    }()
 
-    includeBuild("${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle")
+    includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
     repositories {
         google()
         mavenCentral()
         gradlePluginPortal()
     }
-
-    plugins {
-        id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
-    }
 }
 
 plugins {
-    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
+    id "dev.flutter.flutter-gradle-plugin" version "1.0.0" apply false
     id "com.android.application" version "8.4.0" apply false
-    id "com.android.library" version "8.4.1" apply false
-    id "org.jetbrains.kotlin.android" version "1.8.0" apply false
+    id "org.jetbrains.kotlin.android" version "2.0.0" apply false
 }
 
 include ":app"
 
-apply from: "${settings.ext.flutterSdkPath}/packages/flutter_tools/gradle/app_plugin_loader.gradle"
+def localPropertiesFile = file("local.properties")
+
+if (localPropertiesFile.exists()) {
+    def flutterSdkPath = {
+        def properties = new Properties()
+        localPropertiesFile.withInputStream { properties.load(it) }
+        def flutterSdkPath = properties.getProperty("flutter.sdk")
+        assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
+        return flutterSdkPath
+    }()
+
+    println("flutterSdkPath ::::::: $flutterSdkPath")
+    apply from: "$flutterSdkPath/packages/flutter_tools/gradle/app_plugin_loader.gradle"
+}
