--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,15 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.8
-  go_router: ^14.1.2
+  go_router: ^14.1.3
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
   sentry_flutter: ^8.2.0
   flutter_plugin_android_lifecycle: ^2.0.19
   shared_preferences: ^2.2.3
-  firebase_auth: ^4.19.5
-  firebase_core: ^2.31.0
-  firebase_database: ^10.5.5
+  firebase_auth: ^4.19.6
+  firebase_core: ^2.31.1
+  firebase_database: ^10.5.6
   geoflutterfire2: 2.3.15
   #  connectycube_sdk: ^2.11.4
   connectivity_plus: ^6.0.3
@@ -31,7 +31,7 @@ dependencies:
   #  uni_links: 0.5.1
   uuid: ^4.4.0
   #  url_launcher: ^6.2.6
-  cloud_firestore: ^4.17.3
+  cloud_firestore: ^4.17.4
   sqflite: ^2.3.3+1
   flutter:
     sdk: flutter
@@ -48,7 +48,7 @@ dependencies:
   flex_color_scheme: ^7.3.1
   flex_color_picker: '>=3.4.1 <4.0.0'
   flutter_local_notifications: ^17.1.2
-  firebase_messaging: ^14.9.2
+  firebase_messaging: ^14.9.3
   device_info_plus: ^10.1.0
   package_info_plus: ^8.0.0
   universal_io: ^2.2.2
@@ -78,7 +78,7 @@ dev_dependencies:
   flutter_flavorizr: ^2.2.3
   flutter_test:
     sdk: flutter
-  flutter_gen_runner: ^5.4.0
+  flutter_gen_runner: ^5.5.0+1
   icons_launcher: ^2.1.7
 
 dependency_overrides:
