--- a/yo/synthetic_package/pubspec.yaml
+++ b/yo/synthetic_package/pubspec.yaml
@@ -3,21 +3,16 @@ environment:
   sdk: '>=2.12.0 <4.0.0'
 dependencies:
   flutter_gallery_assets: 1.0.2
-  flutter_template_images: 4.2.0
-  material_color_utilities: 0.8.0
-  archive: 3.3.2
-  leak_tracker: 10.0.0
-  leak_tracker_testing: 2.0.1
-  leak_tracker_flutter_testing: 2.0.1
-  path_provider_android: 2.2.1
-  vm_service: 13.0.0
-  test_api: 0.6.1
-  test_core: 0.5.9
-  test: 1.24.9
-  web_socket_channel: 2.4.1
+  flutter_template_images: ^4.2.1
+  material_color_utilities: ^0.11.1
+  archive: ^3.6.0
+  leak_tracker: ^10.0.5
+  leak_tracker_testing: 3.0.1
+  leak_tracker_flutter_testing: ^3.0.5
+  path_provider_android: ^2.2.4
   characters: 1.3.0
   collection: 1.18.0
-  meta: 1.15.0
+  meta: ^1.15.0
   vector_math: 2.1.4
   async: 2.11.0
   boolean_selector: 2.1.1
@@ -30,20 +25,23 @@ dependencies:
   stream_channel: 2.1.2
   string_scanner: 1.2.0
   term_glyph: 1.2.1
+  test_api: ^0.7.1
+  vm_service: ^14.2.2
   platform: 3.1.4
-  _fe_analyzer_shared: 67.0.0
-  analyzer: 6.4.1
-  args: 2.5.0
+  test: ^1.25.5
+  _fe_analyzer_shared: ^68.0.0
+  analyzer: ^6.5.0
+  args: ^2.5.0
   convert: 3.1.1
-  coverage: 1.8.0
+  coverage: ^1.8.0
   crypto: 3.0.3
   file: 7.0.0
-  frontend_server_client: 3.2.0
+  frontend_server_client: ^4.0.0
   glob: 2.1.2
   http_multi_server: 3.2.1
   http_parser: 4.0.2
   io: 1.0.4
-  js: 0.6.7
+  js: 0.7.1
   logging: 1.2.0
   mime: 1.0.5
   node_preamble: 2.0.2
@@ -54,36 +52,43 @@ dependencies:
   shelf: 1.4.1
   shelf_packages_handler: 3.0.2
   shelf_static: 1.1.2
-  shelf_web_socket: 1.0.4
+  shelf_web_socket: ^2.0.0
   source_map_stack_trace: 2.1.1
   source_maps: 0.10.12
+  test_core: ^0.6.2
   typed_data: 1.3.2
   watcher: 1.1.0
-  web: 0.4.2
+  web: 0.5.1
+  web_socket_channel: ^3.0.0
   webkit_inspection_protocol: 1.2.1
   yaml: 3.1.2
   sync_http: 0.3.1
   webdriver: 3.0.3
-  http: 0.13.6
+  http: ^1.2.1
   intl: 0.19.0
   isolate: 2.1.1
-  cupertino_icons: 1.0.8
-  google_fonts: 4.0.4
+  cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
   ffi: 2.1.2
-  path_provider: 2.1.3
-  path_provider_foundation: 2.4.0
+  path_provider: ^2.1.3
+  path_provider_foundation: ^2.4.0
   path_provider_linux: 2.2.1
   path_provider_platform_interface: 2.1.2
   path_provider_windows: 2.2.1
   plugin_platform_interface: 2.1.8
-  win32: 5.5.0
+  win32: ^5.5.1
   xdg_directories: 1.0.4
+  google_mobile_ads: ^5.1.0
+  webview_flutter: 4.7.0
+  webview_flutter_android: ^3.16.1
+  webview_flutter_platform_interface: 2.10.0
+  webview_flutter_wkwebview: ^3.13.1
   _discoveryapis_commons: 1.0.6
   checked_yaml: 2.0.3
   gcloud: 0.8.12
-  googleapis: 12.0.0
-  googleapis_auth: 1.4.1
-  json_annotation: 4.9.0
+  googleapis: ^13.1.0
+  googleapis_auth: ^1.6.0
+  json_annotation: ^4.9.0
   metrics_center: 1.0.13
   petitparser: 6.0.2
   pubspec_parse: 1.2.3
@@ -103,8 +108,8 @@ dependencies:
 
   device_info: 2.0.3
   connectivity: 3.0.6
-  url_launcher: 6.2.6
-  video_player: 2.8.6
+  url_launcher: ^6.2.6
+  video_player: ^2.8.6
   scoped_model: 2.0.0
   shrine_images: 2.0.2
   connectivity_for_web: 0.4.0+1
@@ -113,51 +118,61 @@ dependencies:
   csslib: 1.0.0
   device_info_platform_interface: 2.0.1
   html: 0.15.4
-  url_launcher_android: 6.3.1
-  url_launcher_ios: 6.3.0
+  url_launcher_android: ^6.3.2
+  url_launcher_ios: ^6.3.0
   url_launcher_linux: 3.1.1
-  url_launcher_macos: 3.2.0
+  url_launcher_macos: ^3.2.0
   url_launcher_platform_interface: 2.3.2
-  url_launcher_web: 2.2.3
+  url_launcher_web: ^2.3.1
   url_launcher_windows: 3.1.1
-  video_player_android: 2.4.14
-  video_player_avfoundation: 2.6.1
+  video_player_android: ^2.4.14
+  video_player_avfoundation: ^2.6.1
   video_player_platform_interface: 6.2.2
-  video_player_web: 2.2.0
-  camera: 0.11.0
-  camera_android_camerax: 0.6.5+1
-  camera_avfoundation: 0.9.16
+  video_player_web: 2.3.0
+  camera: ^0.11.0
+  camera_android: 0.10.8+17
+  camera_avfoundation: 0.9.14+1
   camera_platform_interface: 2.7.4
-  camera_web: 0.3.3
-  cross_file: 0.3.3+8
-  flutter_plugin_android_lifecycle: 2.0.19
+  camera_web: 0.3.2+4
+  cross_file: 0.3.4+1
+  flutter_plugin_android_lifecycle: ^2.0.19
   stream_transform: 2.1.0
+  adaptive_breakpoints: 0.1.7
+  animations: 2.0.11
+  dual_screen: 1.0.4
+  flutter_localized_locales: 2.0.5
+  flutter_staggered_grid_view: 0.7.0
+  provider: 6.1.2
+  rally_assets: 3.0.1
+  nested: 1.0.0
+  dart_style: 2.3.6
   process_runner: 4.2.0
   browser_launcher: 1.1.1
-  dds: 3.1.0+1
-  dwds: 23.3.0
+  dds: ^4.2.1
+  dwds: ^24.0.0
   completion: 1.0.1
   multicast_dns: 0.3.2+6
   mustache_template: 2.0.0
   usage: 4.1.1
-  native_stack_traces: 0.5.7
-  uuid: 3.0.7
-  unified_analytics: 6.1.0
+  native_stack_traces: ^0.5.7
+  uuid: ^4.4.0
+  unified_analytics: ^6.1.0
   cli_config: 0.2.0
   graphs: 2.3.1
-  native_assets_builder: 0.6.1
-  native_assets_cli: 0.5.4
+  native_assets_builder: ^0.7.0
+  native_assets_cli: ^0.6.0
   built_collection: 5.1.1
-  built_value: 8.9.2
+  built_value: ^8.9.2
   dap: 1.2.0
-  dds_service_extensions: 1.6.2
-  devtools_shared: 6.0.4
+  dds_service_extensions: ^2.0.0
+  devtools_shared: ^9.0.1
+  dtd: ^2.2.0
   extension_discovery: 2.0.0
   json_rpc_2: 3.0.2
   shelf_proxy: 1.0.4
-  sse: 4.1.4
-  vm_service_interface: 1.0.1
-  yaml_edit: 2.2.1
+  sse: 4.1.5
+  vm_service_interface: ^1.1.0
+  yaml_edit: ^2.2.1
   file_testing: 3.0.0
   pedantic: 1.11.1
 dependency_overrides:
